configured iOS controllers and navigation appearance

--- a/ProjectOnlineMobile2.iOS/ProjectOnlineMobile2.iOS.csproj
+++ b/ProjectOnlineMobile2.iOS/ProjectOnlineMobile2.iOS.csproj
@@ -58,14 +58,19 @@
     <ConsolePause>false</ConsolePause>
     <CodesignKey>iPhone Developer</CodesignKey>
   </PropertyGroup>
+  <PropertyGroup Condition=" '$(RunConfiguration)' == 'Default' ">
+    <AppExtensionDebugBundleId />
+  </PropertyGroup>
   <ItemGroup>
-    <Compile Include="LandingPageController.cs" />
-    <Compile Include="LandingPageController.designer.cs">
-      <DependentUpon>LandingPageController.cs</DependentUpon>
+    <Compile Include="HomeController.cs" />
+    <Compile Include="HomeController.designer.cs">
+      <DependentUpon>HomeController.cs</DependentUpon>
     </Compile>
     <Compile Include="Main.cs" />
     <Compile Include="AppDelegate.cs" />
-    <None Include="Info.plist" />
+    <None Include="Info.plist">
+      <SubType>Designer</SubType>
+    </None>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
